--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,6 +33,9 @@ android {
             }
         }
     }
+    buildFeatures {
+        mlModelBinding true
+    }
 }
 
 dependencies {
@@ -43,6 +46,7 @@ dependencies {
     implementation 'com.google.android.material:material:1.9.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
     implementation 'com.google.android.gms:play-services-tflite-acceleration-service:+'
+    implementation 'org.tensorflow:tensorflow-lite-gpu:2.3.0'
 
     // CameraX area
     def camerax_version = "1.3.0-alpha06"
